--- a/index.html
+++ b/index.html
@@ -1,7 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/instantsearch.js/1/instantsearch.min.css" />
+    <title>instantsearch.js basics</title>
+  </head>
+  <body>
+    <input type="text" id="search-box" />
+    <div id="hits-container"></div>
+    <div id="pagination-container"></div>
+
+    <script src="https://cdn.jsdelivr.net/instantsearch.js/1/instantsearch.min.js"></script>
+    <script>
+      var search = instantsearch({
+        appId: 'PPJNK64RRI',
+        apiKey: 'b74d8a9d74609a45a218354901ff59f9',
+        indexName: 'bestbuy'
+      });
+      search.addWidget(
+        instantsearch.widgets.searchBox({
+          container: '#search-box',
+          placeholder: 'Search for products...'
+        })
+      );
+      search.addWidget(
+        instantsearch.widgets.hits({
+          container: '#hits-container',
+          templates: {
+            item: '{{name}}'
+          }
+        })
+      );
+      search.addWidget(
+        instantsearch.widgets.pagination({
+          container: '#pagination-container'
+        })
+      );
+      search.addWidget(
+        instantsearch.widgets.stats({
+          container: '#stats-container'
+        })
+      );
+      
+      search.start();
+    </script>
+  </body>
 </html>
