--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <input type="text" id="search-box" />
     <div id="hits-container"></div>
     <div id="pagination-container"></div>
-    <div id="stats-container"</div>
+    <div id="stats-container"></div>
 
     <script src="https://cdn.jsdelivr.net/instantsearch.js/1/instantsearch.min.js"></script>
     <script>
